# bretez

./: .gitignore  README.md  classifier_train.md  classify.md  constraints.md  loader.py  main.py  predicter.md  pyproject.toml
src/bretez/: app.py  backbone.py  classifier.py  cli.py  config.py  extractor.py  jobs.py  loader.py  mcp_server.py  server.py  state.py
src/bretez/static/: app.js  index.html  styles.css
